Fix record field alignment when name is too long
Change <dl> to <ul> and use display:table rather than floats to layout
the record fields.  This avoids bug haskell/haddock#301 that occurs whenever the field
name gets too long.

Slight aesthetic change: the entire cell of the field's source code is
now shaded gray rather than just the area where text exists.

Fixes haskell/haddock#301. Closes haskell/haddock#421

--- a/haddock-api/resources/html/Ocean.std-theme/ocean.css
+++ b/haddock-api/resources/html/Ocean.std-theme/ocean.css
@@ -427,30 +427,31 @@ div#style-menu-holder {
   visibility: hidden;
 }
 
-.subs dl {
+.subs ul {
+  list-style: none;
+  display: table;
   margin: 0;
 }
 
-.subs dt {
-  float: left;
-  clear: left;
-  display: block;
-  margin: 1px 0;
+.subs ul li {
+  display: table-row;
 }
 
-.subs dd {
-  float: right;
-  width: 90%;
-  display: block;
+.subs ul li dfn {
+  display: table-cell;
+  font-style: normal;
+  font-weight: bold;
+  margin: 1px 0;
+  white-space: nowrap;
+}
+
+.subs ul li > .doc {
+  display: table-cell;
   padding-left: 0.5em;
   margin-bottom: 0.5em;
 }
 
-.subs dd.empty {
-  display: none;
-}
-
-.subs dd p {
+.subs ul li > .doc p {
   margin: 0;
 }
 
